sandc/test/fixtures/astRegression/shouldFail/typedObjectLiteral/AssignmentLeftHand.sand
pub class AssignmentLeftHand {
    assignmentLeftHand() {
        Foo {} = foo;
    }
}